--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -13,7 +13,7 @@
         <section id="home">
             <div class="hero">
                 <div class="profile-picture">
-                    <img src="../assets/images/Shivansh Profile.JPG" alt="Shivansh Vishwakarma">
+                    <img src="assets/images/Shivansh Profile.JPG" alt="Shivansh Vishwakarma">
                 </div>
                 <h1>Shivansh Vishwakarma</h1>
                 <p>BTech CSE Student | Developer | Tech Enthusiast</p>
@@ -23,7 +23,7 @@
                     <a href="mailto:vishivansh7@gmail.com"><i class="fas fa-envelope"></i></a>
                 </div>
                 <div class="resume-button">
-                    <a href="../assets/documents/Resume(Shivansh).pdf" download class="download-btn">
+                    <a href="assets/documents/UpdatedResume(Shivansh).pdf" download class="download-btn">
                         <i class="fas fa-download"></i> Download Resume
                     </a>
                 </div>
@@ -144,6 +144,6 @@
             </div>
         </section>
     </main>
-    <script src="../assets/scripts/main.js"></script>
+    <script src="assets/scripts/main.js"></script>
 </body>
 </html>
