--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="resume-button">
                     <a href="assets/documents/UpdatedResume(Shivansh).pdf" download class="download-btn">
-                        <i class="fas fa-download"></i> Download Resume
+                        <i class="fas fa-download"></i> View Resume
                     </a>
                 </div>
             </div>
