--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shivansh Vishwakarma - Personal Profile</title>
+    <meta name="description" content="Portfolio website of Shivansh Vishwakarma - BTech CSE Student and Developer">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="assets/styles/main.css">
+    <link rel="stylesheet" href="./assets/styles/main.css">
 </head>
 <body>
     <header id="header"></header>
