Update: Ensure UpdatedResume.pdf is the only resume file and update link

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <a href="mailto:vishivansh7@gmail.com"><i class="fas fa-envelope"></i></a>
                 </div>
                 <div class="resume-button">
-                    <a href="assets/documents/UpdatedResume(Shivansh).pdf" download class="download-btn">
+                    <a href="assets/documents/UpdatedResume.pdf" download class="download-btn">
                         <i class="fas fa-download"></i> View Resume
                     </a>
                 </div>
