--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Portfolio website of Shivansh Vishwakarma - BTech CSE Student and Developer">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="./assets/styles/main.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.3/particles.min.js"></script>
 </head>
 <body>
     <header id="header">
@@ -31,6 +32,9 @@
             </div>
         </nav>
     </header>
+    <div class="welcome-strip">
+        <p>Welcome to MyWeb.</p>
+    </div>
     <main>
         <section id="home">
             <div class="animated-bg">
@@ -58,6 +62,10 @@
                 </div>
             </div>
         </section>
+        <div class="tech-background">
+            <canvas id="matrixCanvas"></canvas>
+            <div class="circuit-pattern"></div>
+        </div>
         <section id="about">
             <div class="about-bg-pattern"></div>
             <div class="container">
