Update portfolio with certificates section and optimization

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, maximum-scale=5.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
     <meta name="theme-color" content="#0f172a">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -246,144 +246,144 @@
             </div>
         </section>
         <section id="certifications">
-            <div class="container">
-                <h2 data-heading="MY CREDENTIALS">Certifications</h2>
-                <div class="certifications-grid">
-                    <!-- NPTEL Organizational Behaviour -->
-                    <div class="certification-card">
-                        <div class="certification-content">
-                            <div class="certification-header">
-                                <img src="assets/images/nptel-logo.png" alt="NPTEL Logo" class="certification-logo">
-                                <h3 class="certification-title">Organizational Behaviour</h3>
-                            </div>
-                            <div class="certification-meta">
-                                <span class="certification-issuer">NPTEL</span>
-                                <span class="certification-date">2024</span>
-                            </div>
-                            <a href="https://drive.google.com/file/d/1qeMQIh8DWTs1wZwFNble6vsk7bj2UQff/view?usp=drive_link" 
-                               target="_blank" 
-                               class="certification-link">
-                                <i class="fas fa-certificate"></i> View Certificate
-                            </a>
-                        </div>
+    <div class="container">
+        <h2 data-heading="MY CREDENTIALS">Certifications</h2>
+        <div class="certifications-grid">
+            <!-- NPTEL Organizational Behaviour -->
+            <div class="certification-card">
+                <div class="certification-content">
+                    <div class="certification-header">
+                        <img src="assets/images/nptel-logo.png" alt="NPTEL Logo" class="certification-logo">
+                        <h3 class="certification-title">Organizational Behaviour</h3>
                     </div>
-
-                    <!-- NPTEL Social Networks -->
-                    <div class="certification-card">
-                        <div class="certification-content">
-                            <div class="certification-header">
-                                <img src="assets/images/nptel-logo.png" alt="NPTEL Logo" class="certification-logo">
-                                <h3 class="certification-title">Social Networks</h3>
-                            </div>
-                            <div class="certification-meta">
-                                <span class="certification-issuer">NPTEL</span>
-                                <span class="certification-date">2024</span>
-                            </div>
-                            <a href="https://drive.google.com/file/d/11kl64EqByb7SY5_g-Yvm5YLeTrDeu88H/view?usp=drive_link" 
-                               target="_blank" 
-                               class="certification-link">
-                                <i class="fas fa-certificate"></i> View Certificate
-                            </a>
-                        </div>
+                    <div class="certification-meta">
+                        <span class="certification-issuer">NPTEL</span>
+                        <span class="certification-date">2024</span>
                     </div>
-
-                    <!-- NPTEL Ethical Hacking -->
-                    <div class="certification-card">
-                        <div class="certification-content">
-                            <div class="certification-header">
-                                <img src="assets/images/nptel-logo.png" alt="NPTEL Logo" class="certification-logo">
-                                <h3 class="certification-title">Ethical Hacking</h3>
-                            </div>
-                            <div class="certification-meta">
-                                <span class="certification-issuer">NPTEL</span>
-                                <span class="certification-date">2024</span>
-                            </div>
-                            <a href="https://drive.google.com/file/d/1nWvSYTa7Vlbgl58lUpFsgAyfLXcR6iIs/view?usp=drive_link" 
-                               target="_blank" 
-                               class="certification-link">
-                                <i class="fas fa-certificate"></i> View Certificate
-                            </a>
-                        </div>
-                    </div>
-
-                    <!-- NPTEL Privacy and Security -->
-                    <div class="certification-card">
-                        <div class="certification-content">
-                            <div class="certification-header">
-                                <img src="assets/images/nptel-logo.png" alt="NPTEL Logo" class="certification-logo">
-                                <h3 class="certification-title">Privacy and Security in Online Social Media</h3>
-                            </div>
-                            <div class="certification-meta">
-                                <span class="certification-issuer">NPTEL</span>
-                                <span class="certification-date">2023</span>
-                            </div>
-                            <a href="https://drive.google.com/file/d/1eHJ9PFhK97GLZDePX6f0RmWeH-2V9Oj4/view?usp=drive_link" 
-                               target="_blank" 
-                               class="certification-link">
-                                <i class="fas fa-certificate"></i> View Certificate
-                            </a>
-                        </div>
-                    </div>
-
-                    <!-- Infosys Interactive Skills -->
-                    <div class="certification-card">
-                        <div class="certification-content">
-                            <div class="certification-header">
-                                <img src="assets/images/infosys-logo.png" alt="Infosys Logo" class="certification-logo">
-                                <h3 class="certification-title">Interactive Skills</h3>
-                            </div>
-                            <div class="certification-meta">
-                                <span class="certification-issuer">Infosys Springboard</span>
-                                <span class="certification-date">2023</span>
-                            </div>
-                            <a href="https://drive.google.com/file/d/1I3vwYAzMBLwwKMF3RUHfglnu2j3skdn5/view?usp=sharing" 
-                               target="_blank" 
-                               class="certification-link">
-                                <i class="fas fa-certificate"></i> View Certificate
-                            </a>
-                        </div>
-                    </div>
-
-                    <!-- Infosys Python Fundamentals -->
-                    <div class="certification-card">
-                        <div class="certification-content">
-                            <div class="certification-header">
-                                <img src="assets/images/infosys-logo.png" alt="Infosys Logo" class="certification-logo">
-                                <h3 class="certification-title">Programming Fundamentals using Python</h3>
-                            </div>
-                            <div class="certification-meta">
-                                <span class="certification-issuer">Infosys Springboard</span>
-                                <span class="certification-date">2023</span>
-                            </div>
-                            <a href="https://drive.google.com/file/d/1ryUw7HHSDDkXkiLVncixZUHBjX2LxXde/view?usp=sharing" 
-                               target="_blank" 
-                               class="certification-link">
-                                <i class="fas fa-certificate"></i> View Certificate
-                            </a>
-                        </div>
-                    </div>
-
-                    <!-- Infosys Python Foundation -->
-                    <div class="certification-card">
-                        <div class="certification-content">
-                            <div class="certification-header">
-                                <img src="assets/images/infosys-logo.png" alt="Infosys Logo" class="certification-logo">
-                                <h3 class="certification-title">Python Foundation</h3>
-                            </div>
-                            <div class="certification-meta">
-                                <span class="certification-issuer">Infosys Springboard</span>
-                                <span class="certification-date">2023</span>
-                            </div>
-                            <a href="https://drive.google.com/file/d/1dREgA1t7l7aSVFKrF65oIWXewW0ER2uq/view?usp=sharing" 
-                               target="_blank" 
-                               class="certification-link">
-                                <i class="fas fa-certificate"></i> View Certificate
-                            </a>
-                        </div>
-                    </div>
+                    <a href="assets/documents/Organizational Behaviour.pdf" 
+                       target="_blank" 
+                       class="certification-link">
+                        <i class="fas fa-certificate"></i> View Certificate
+                    </a>
                 </div>
             </div>
-        </section>
+
+            <!-- NPTEL Ethical Hacking -->
+            <div class="certification-card">
+                <div class="certification-content">
+                    <div class="certification-header">
+                        <img src="assets/images/nptel-logo.png" alt="NPTEL Logo" class="certification-logo">
+                        <h3 class="certification-title">Ethical Hacking</h3>
+                    </div>
+                    <div class="certification-meta">
+                        <span class="certification-issuer">NPTEL</span>
+                        <span class="certification-date">2024</span>
+                    </div>
+                    <a href="assets/documents/Ethical Hacking.pdf" 
+                       target="_blank" 
+                       class="certification-link">
+                        <i class="fas fa-certificate"></i> View Certificate
+                    </a>
+                </div>
+            </div>
+
+            <!-- NPTEL Social Networks -->
+            <div class="certification-card">
+                <div class="certification-content">
+                    <div class="certification-header">
+                        <img src="assets/images/nptel-logo.png" alt="NPTEL Logo" class="certification-logo">
+                        <h3 class="certification-title">Social Networks</h3>
+                    </div>
+                    <div class="certification-meta">
+                        <span class="certification-issuer">NPTEL</span>
+                        <span class="certification-date">2023</span>
+                    </div>
+                    <a href="assets/documents/Social Networks.pdf" 
+                       target="_blank" 
+                       class="certification-link">
+                        <i class="fas fa-certificate"></i> View Certificate
+                    </a>
+                </div>
+            </div>
+
+            <!-- NPTEL Privacy and Security -->
+            <div class="certification-card">
+                <div class="certification-content">
+                    <div class="certification-header">
+                        <img src="assets/images/nptel-logo.png" alt="NPTEL Logo" class="certification-logo">
+                        <h3 class="certification-title">Privacy and Security in Online Social Media</h3>
+                    </div>
+                    <div class="certification-meta">
+                        <span class="certification-issuer">NPTEL</span>
+                        <span class="certification-date">2023</span>
+                    </div>
+                    <a href="assets/documents/Privacy And Security In Online Social Media.pdf" 
+                       target="_blank" 
+                       class="certification-link">
+                        <i class="fas fa-certificate"></i> View Certificate
+                    </a>
+                </div>
+            </div>
+
+            <!-- Infosys Interactive Skills -->
+            <div class="certification-card">
+                <div class="certification-content">
+                    <div class="certification-header">
+                        <img src="assets/images/infosys-logo.png" alt="Infosys Logo" class="certification-logo">
+                        <h3 class="certification-title">Interactive Skills</h3>
+                    </div>
+                    <div class="certification-meta">
+                        <span class="certification-issuer">Infosys Springboard</span>
+                        <span class="certification-date">2023</span>
+                    </div>
+                    <a href="assets/documents/Interactive Skills.pdf" 
+                       target="_blank" 
+                       class="certification-link">
+                        <i class="fas fa-certificate"></i> View Certificate
+                    </a>
+                </div>
+            </div>
+
+            <!-- Infosys Python Fundamentals -->
+            <div class="certification-card">
+                <div class="certification-content">
+                    <div class="certification-header">
+                        <img src="assets/images/infosys-logo.png" alt="Infosys Logo" class="certification-logo">
+                        <h3 class="certification-title">Programming Fundamentals using Python</h3>
+                    </div>
+                    <div class="certification-meta">
+                        <span class="certification-issuer">Infosys Springboard</span>
+                        <span class="certification-date">2023</span>
+                    </div>
+                    <a href="assets/documents/Infosys Springboard Programming Fundamentals using Python Part1&2.pdf" 
+                       target="_blank" 
+                       class="certification-link">
+                        <i class="fas fa-certificate"></i> View Certificate
+                    </a>
+                </div>
+            </div>
+
+            <!-- Infosys Python Foundation -->
+            <div class="certification-card">
+                <div class="certification-content">
+                    <div class="certification-header">
+                        <img src="assets/images/infosys-logo.png" alt="Infosys Logo" class="certification-logo">
+                        <h3 class="certification-title">Python Foundation</h3>
+                    </div>
+                    <div class="certification-meta">
+                        <span class="certification-issuer">Infosys Springboard</span>
+                        <span class="certification-date">2023</span>
+                    </div>
+                    <a href="assets/documents/Python Foundation Certification.pdf" 
+                       target="_blank" 
+                       class="certification-link">
+                        <i class="fas fa-certificate"></i> View Certificate
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
         <section id="contact">
             <div class="container">
                 <h2 data-heading="GET IN TOUCH">Contact Me</h2>
@@ -414,10 +414,12 @@
         <div class="container">
             <div class="footer-content">
                 <p>© 2024 Shivansh Vishwakarma. All Rights Reserved.</p>
-                <p class="footer-tagline">Crafted with passion and dedication.</p>
+                <p class="footer-tagline">Built with <i class="fas fa-heart"></i> and <i class="fas fa-code"></i></p>
             </div>
         </div>
     </footer>
-    <script src="./assets/scripts/main.js" type="module"></script>
+    <script src="assets/scripts/main.js"></script>
+    <script src="assets/scripts/scroll-animations.js"></script>
+    <script src="assets/scripts/particle-network.js"></script>
 </body>
 </html>
